compilador.output
Terminals unused in grammar

   PONTO_PONTO
   SLASH


State 96 conflicts: 19 reduce/reduce
State 191 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: /* empty */

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: /* empty */

    4 $@3: /* empty */

    5 bloco: parte_declara_rotulos_opt parte_declara_vars_opt $@2 parte_declara_subrotinas_opt $@3 comando_composto

    6 parte_declara_rotulos_opt: /* empty */
    7                          | parte_declara_rotulos

    8 parte_declara_vars_opt: /* empty */
    9                       | parte_declara_vars

   10 parte_declara_subrotinas_opt: /* empty */

   11 $@4: /* empty */

   12 parte_declara_subrotinas_opt: $@4 parte_declara_subrotinas

   13 $@5: /* empty */

   14 parte_declara_rotulos: LABEL NUMERO $@5 parte_declara_rotulos_loop PONTO_E_VIRGULA

   15 parte_declara_rotulos_loop: /* empty */

   16 $@6: /* empty */

   17 parte_declara_rotulos_loop: VIRGULA NUMERO $@6 parte_declara_rotulos_loop

   18 $@7: /* empty */

   19 parte_declara_vars: VAR $@7 declara_vars PONTO_E_VIRGULA parte_declara_vars_loop

   20 parte_declara_vars_loop: /* empty */
   21                        | declara_vars PONTO_E_VIRGULA parte_declara_vars_loop

   22 declara_vars: lista_idents DOIS_PONTOS tipo

   23 tipo: IDENT

   24 $@8: /* empty */

   25 lista_idents: identificador $@8 lista_idents_loop

   26 lista_idents_loop: /* empty */

   27 $@9: /* empty */

   28 lista_idents_loop: VIRGULA identificador $@9 lista_idents_loop

   29 parte_declara_subrotinas: declaracao_procedimento PONTO_E_VIRGULA parte_declara_subrotinas_loop
   30                         | declaracao_funcao PONTO_E_VIRGULA parte_declara_subrotinas_loop

   31 parte_declara_subrotinas_loop: /* empty */
   32                              | parte_declara_subrotinas

   33 $@10: /* empty */

   34 $@11: /* empty */

   35 $@12: /* empty */

   36 declaracao_procedimento: PROCEDURE $@10 identificador $@11 parametros_formais_opt PONTO_E_VIRGULA $@12 bloco

   37 $@13: /* empty */

   38 $@14: /* empty */

   39 $@15: /* empty */

   40 $@16: /* empty */

   41 declaracao_funcao: FUNCTION $@13 identificador $@14 parametros_formais_opt $@15 DOIS_PONTOS identificador $@16 PONTO_E_VIRGULA bloco

   42 parametros_formais_opt: /* empty */
   43                       | parametros_formais

   44 parametros_formais: ABRE_PARENTESES secao_parametros_formais parametros_formais_loop FECHA_PARENTESES

   45 parametros_formais_loop: /* empty */
   46                        | PONTO_E_VIRGULA secao_parametros_formais parametros_formais_loop

   47 $@17: /* empty */

   48 secao_parametros_formais: lista_idents $@17 DOIS_PONTOS tipo

   49 $@18: /* empty */

   50 secao_parametros_formais: VAR lista_idents $@18 DOIS_PONTOS tipo

   51 comando_composto: T_BEGIN comando comando_composto_loop T_END

   52 comando_composto_loop: /* empty */
   53                      | PONTO_E_VIRGULA comando comando_composto_loop

   54 $@19: /* empty */

   55 comando: NUMERO $@19 DOIS_PONTOS comando_sem_label
   56        | comando_sem_label

   57 comando_sem_label: /* empty */
   58                  | atribuicao
   59                  | chamada_procedimento
   60                  | desvio
   61                  | comando_composto
   62                  | comando_condicional
   63                  | comando_repetitivo
   64                  | comando_escrita
   65                  | comando_leitura

   66 $@20: /* empty */

   67 comando_escrita: WRITE $@20 ABRE_PARENTESES lista_expressoes FECHA_PARENTESES

   68 comando_leitura: READ ABRE_PARENTESES comando_leitura_1 FECHA_PARENTESES

   69 $@21: /* empty */

   70 $@22: /* empty */

   71 comando_leitura_1: $@21 variavel $@22 comando_leitura_1_loop

   72 comando_leitura_1_loop: /* empty */
   73                       | VIRGULA comando_leitura_1

   74 $@23: /* empty */

   75 atribuicao: variavel $@23 ATRIBUICAO expressao

   76 $@24: /* empty */

   77 chamada_procedimento: identificador $@24 lista_expressoes_opt

   78 lista_expressoes_opt: /* empty */
   79                     | ABRE_PARENTESES lista_expressoes FECHA_PARENTESES

   80 desvio: GOTO NUMERO

   81 $@25: /* empty */

   82 $@26: /* empty */

   83 comando_condicional: IF expressao $@25 THEN comando_sem_label $@26 comando_condicional_else

   84 comando_condicional_else: /* empty */
   85                         | ELSE comando_sem_label

   86 $@27: /* empty */

   87 $@28: /* empty */

   88 comando_repetitivo: WHILE $@27 expressao $@28 DO comando_sem_label

   89 $@29: /* empty */

   90 lista_expressoes: expressao $@29 lista_expressoes_loop

   91 lista_expressoes_loop: /* empty */

   92 $@30: /* empty */

   93 lista_expressoes_loop: VIRGULA expressao $@30 lista_expressoes_loop

   94 expressao: expressao_simples
   95          | expressao_simples IGUAL expressao_simples
   96          | expressao_simples DIFERENTE expressao_simples
   97          | expressao_simples MENOR expressao_simples
   98          | expressao_simples MAIOR expressao_simples
   99          | expressao_simples MAIOR_IGUAL expressao_simples
  100          | expressao_simples MENOR_IGUAL expressao_simples

  101 expressao_simples: termo expressao_simples_loop
  102                  | MAIS termo expressao_simples_loop

  103 $@31: /* empty */

  104 expressao_simples: MENOS termo $@31 expressao_simples_loop

  105 expressao_simples_loop: /* empty */

  106 $@32: /* empty */

  107 expressao_simples_loop: MAIS termo $@32 expressao_simples_loop

  108 $@33: /* empty */

  109 expressao_simples_loop: MENOS termo $@33 expressao_simples_loop

  110 $@34: /* empty */

  111 expressao_simples_loop: OR termo $@34 expressao_simples_loop

  112 termo: fator termo_loop

  113 termo_loop: /* empty */

  114 $@35: /* empty */

  115 termo_loop: VEZES fator $@35 termo_loop

  116 $@36: /* empty */

  117 termo_loop: DIV fator $@36 termo_loop
  118           | AND fator

  119 fator: variavel
  120      | numero
  121      | chamada_funcao
  122      | ABRE_PARENTESES expressao FECHA_PARENTESES
  123      | NOT fator

  124 variavel: identificador

  125 $@37: /* empty */

  126 chamada_funcao: identificador $@37 lista_expressoes_opt

  127 numero: NUMERO

  128 identificador: IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
ABRE_PARENTESES (258) 2 44 67 68 79 122
AND (259) 118
ATRIBUICAO (260) 75
DIFERENTE (261) 96
DIV (262) 117
DO (263) 88
DOIS_PONTOS (264) 22 41 48 50 55
ELSE (265) 85
FECHA_PARENTESES (266) 2 44 67 68 79 122
FUNCTION (267) 41
GOTO (268) 80
IDENT (269) 2 23 128
IF (270) 83
IGUAL (271) 95
LABEL (272) 14
MAIOR (273) 98
MAIOR_IGUAL (274) 99
MAIS (275) 102 107
MENOR (276) 97
MENOR_IGUAL (277) 100
MENOS (278) 104 109
NOT (279) 123
NUMERO (280) 14 17 55 80 127
OR (281) 111
PONTO (282) 2
PONTO_E_VIRGULA (283) 2 14 19 21 29 30 36 41 46 53
PONTO_PONTO (284)
PROCEDURE (285) 36
PROGRAM (286) 2
READ (287) 68
T_BEGIN (288) 51
T_END (289) 51
THEN (290) 83
VAR (291) 19 50
VEZES (292) 115
VIRGULA (293) 17 28 73 93
WHILE (294) 88
WRITE (295) 67
SLASH (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
programa (43)
    on left: 2, on right: 0
$@1 (44)
    on left: 1, on right: 2
bloco (45)
    on left: 5, on right: 2 36 41
$@2 (46)
    on left: 3, on right: 5
$@3 (47)
    on left: 4, on right: 5
parte_declara_rotulos_opt (48)
    on left: 6 7, on right: 5
parte_declara_vars_opt (49)
    on left: 8 9, on right: 5
parte_declara_subrotinas_opt (50)
    on left: 10 12, on right: 5
$@4 (51)
    on left: 11, on right: 12
parte_declara_rotulos (52)
    on left: 14, on right: 7
$@5 (53)
    on left: 13, on right: 14
parte_declara_rotulos_loop (54)
    on left: 15 17, on right: 14 17
$@6 (55)
    on left: 16, on right: 17
parte_declara_vars (56)
    on left: 19, on right: 9
$@7 (57)
    on left: 18, on right: 19
parte_declara_vars_loop (58)
    on left: 20 21, on right: 19 21
declara_vars (59)
    on left: 22, on right: 19 21
tipo (60)
    on left: 23, on right: 22 48 50
lista_idents (61)
    on left: 25, on right: 2 22 48 50
$@8 (62)
    on left: 24, on right: 25
lista_idents_loop (63)
    on left: 26 28, on right: 25 28
$@9 (64)
    on left: 27, on right: 28
parte_declara_subrotinas (65)
    on left: 29 30, on right: 12 32
parte_declara_subrotinas_loop (66)
    on left: 31 32, on right: 29 30
declaracao_procedimento (67)
    on left: 36, on right: 29
$@10 (68)
    on left: 33, on right: 36
$@11 (69)
    on left: 34, on right: 36
$@12 (70)
    on left: 35, on right: 36
declaracao_funcao (71)
    on left: 41, on right: 30
$@13 (72)
    on left: 37, on right: 41
$@14 (73)
    on left: 38, on right: 41
$@15 (74)
    on left: 39, on right: 41
$@16 (75)
    on left: 40, on right: 41
parametros_formais_opt (76)
    on left: 42 43, on right: 36 41
parametros_formais (77)
    on left: 44, on right: 43
parametros_formais_loop (78)
    on left: 45 46, on right: 44 46
secao_parametros_formais (79)
    on left: 48 50, on right: 44 46
$@17 (80)
    on left: 47, on right: 48
$@18 (81)
    on left: 49, on right: 50
comando_composto (82)
    on left: 51, on right: 5 61
comando_composto_loop (83)
    on left: 52 53, on right: 51 53
comando (84)
    on left: 55 56, on right: 51 53
$@19 (85)
    on left: 54, on right: 55
comando_sem_label (86)
    on left: 57 58 59 60 61 62 63 64 65, on right: 55 56 83 85 88
comando_escrita (87)
    on left: 67, on right: 64
$@20 (88)
    on left: 66, on right: 67
comando_leitura (89)
    on left: 68, on right: 65
comando_leitura_1 (90)
    on left: 71, on right: 68 73
$@21 (91)
    on left: 69, on right: 71
$@22 (92)
    on left: 70, on right: 71
comando_leitura_1_loop (93)
    on left: 72 73, on right: 71
atribuicao (94)
    on left: 75, on right: 58
$@23 (95)
    on left: 74, on right: 75
chamada_procedimento (96)
    on left: 77, on right: 59
$@24 (97)
    on left: 76, on right: 77
lista_expressoes_opt (98)
    on left: 78 79, on right: 77 126
desvio (99)
    on left: 80, on right: 60
comando_condicional (100)
    on left: 83, on right: 62
$@25 (101)
    on left: 81, on right: 83
$@26 (102)
    on left: 82, on right: 83
comando_condicional_else (103)
    on left: 84 85, on right: 83
comando_repetitivo (104)
    on left: 88, on right: 63
$@27 (105)
    on left: 86, on right: 88
$@28 (106)
    on left: 87, on right: 88
lista_expressoes (107)
    on left: 90, on right: 67 79
$@29 (108)
    on left: 89, on right: 90
lista_expressoes_loop (109)
    on left: 91 93, on right: 90 93
$@30 (110)
    on left: 92, on right: 93
expressao (111)
    on left: 94 95 96 97 98 99 100, on right: 75 83 88 90 93 122
expressao_simples (112)
    on left: 101 102 104, on right: 94 95 96 97 98 99 100
$@31 (113)
    on left: 103, on right: 104
expressao_simples_loop (114)
    on left: 105 107 109 111, on right: 101 102 104 107 109 111
$@32 (115)
    on left: 106, on right: 107
$@33 (116)
    on left: 108, on right: 109
$@34 (117)
    on left: 110, on right: 111
termo (118)
    on left: 112, on right: 101 102 104 107 109 111
termo_loop (119)
    on left: 113 115 117 118, on right: 112 115 117
$@35 (120)
    on left: 114, on right: 115
$@36 (121)
    on left: 116, on right: 117
fator (122)
    on left: 119 120 121 122 123, on right: 112 115 117 118 123
variavel (123)
    on left: 124, on right: 71 75 119
chamada_funcao (124)
    on left: 126, on right: 121
$@37 (125)
    on left: 125, on right: 126
numero (126)
    on left: 127, on right: 120
identificador (127)
    on left: 128, on right: 25 28 36 41 77 124 126


state 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


state 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


state 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


state 3

    0 $accept: programa $end .

    $default  accept


state 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


state 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


state 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents   go to state 8
    identificador  go to state 9


state 7

  128 identificador: IDENT .

    $default  reduce using rule 128 (identificador)


state 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    FECHA_PARENTESES  shift, and go to state 10


state 9

   25 lista_idents: identificador . $@8 lista_idents_loop

    $default  reduce using rule 24 ($@8)

    $@8  go to state 11


state 10

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 12


state 11

   25 lista_idents: identificador $@8 . lista_idents_loop

    VIRGULA  shift, and go to state 13

    $default  reduce using rule 26 (lista_idents_loop)

    lista_idents_loop  go to state 14


state 12

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    LABEL  shift, and go to state 15

    $default  reduce using rule 6 (parte_declara_rotulos_opt)

    bloco                      go to state 16
    parte_declara_rotulos_opt  go to state 17
    parte_declara_rotulos      go to state 18


state 13

   28 lista_idents_loop: VIRGULA . identificador $@9 lista_idents_loop

    IDENT  shift, and go to state 7

    identificador  go to state 19


state 14

   25 lista_idents: identificador $@8 lista_idents_loop .

    $default  reduce using rule 25 (lista_idents)


state 15

   14 parte_declara_rotulos: LABEL . NUMERO $@5 parte_declara_rotulos_loop PONTO_E_VIRGULA

    NUMERO  shift, and go to state 20


state 16

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 21


state 17

    5 bloco: parte_declara_rotulos_opt . parte_declara_vars_opt $@2 parte_declara_subrotinas_opt $@3 comando_composto

    VAR  shift, and go to state 22

    $default  reduce using rule 8 (parte_declara_vars_opt)

    parte_declara_vars_opt  go to state 23
    parte_declara_vars      go to state 24


state 18

    7 parte_declara_rotulos_opt: parte_declara_rotulos .

    $default  reduce using rule 7 (parte_declara_rotulos_opt)


state 19

   28 lista_idents_loop: VIRGULA identificador . $@9 lista_idents_loop

    $default  reduce using rule 27 ($@9)

    $@9  go to state 25


state 20

   14 parte_declara_rotulos: LABEL NUMERO . $@5 parte_declara_rotulos_loop PONTO_E_VIRGULA

    $default  reduce using rule 13 ($@5)

    $@5  go to state 26


state 21

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


state 22

   19 parte_declara_vars: VAR . $@7 declara_vars PONTO_E_VIRGULA parte_declara_vars_loop

    $default  reduce using rule 18 ($@7)

    $@7  go to state 27


state 23

    5 bloco: parte_declara_rotulos_opt parte_declara_vars_opt . $@2 parte_declara_subrotinas_opt $@3 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 28


state 24

    9 parte_declara_vars_opt: parte_declara_vars .

    $default  reduce using rule 9 (parte_declara_vars_opt)


state 25

   28 lista_idents_loop: VIRGULA identificador $@9 . lista_idents_loop

    VIRGULA  shift, and go to state 13

    $default  reduce using rule 26 (lista_idents_loop)

    lista_idents_loop  go to state 29


state 26

   14 parte_declara_rotulos: LABEL NUMERO $@5 . parte_declara_rotulos_loop PONTO_E_VIRGULA

    VIRGULA  shift, and go to state 30

    $default  reduce using rule 15 (parte_declara_rotulos_loop)

    parte_declara_rotulos_loop  go to state 31


state 27

   19 parte_declara_vars: VAR $@7 . declara_vars PONTO_E_VIRGULA parte_declara_vars_loop

    IDENT  shift, and go to state 7

    declara_vars   go to state 32
    lista_idents   go to state 33
    identificador  go to state 9


state 28

    5 bloco: parte_declara_rotulos_opt parte_declara_vars_opt $@2 . parte_declara_subrotinas_opt $@3 comando_composto

    T_BEGIN   reduce using rule 10 (parte_declara_subrotinas_opt)
    $default  reduce using rule 11 ($@4)

    parte_declara_subrotinas_opt  go to state 34
    $@4                           go to state 35


state 29

   28 lista_idents_loop: VIRGULA identificador $@9 lista_idents_loop .

    $default  reduce using rule 28 (lista_idents_loop)


state 30

   17 parte_declara_rotulos_loop: VIRGULA . NUMERO $@6 parte_declara_rotulos_loop

    NUMERO  shift, and go to state 36


state 31

   14 parte_declara_rotulos: LABEL NUMERO $@5 parte_declara_rotulos_loop . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 37


state 32

   19 parte_declara_vars: VAR $@7 declara_vars . PONTO_E_VIRGULA parte_declara_vars_loop

    PONTO_E_VIRGULA  shift, and go to state 38


state 33

   22 declara_vars: lista_idents . DOIS_PONTOS tipo

    DOIS_PONTOS  shift, and go to state 39


state 34

    5 bloco: parte_declara_rotulos_opt parte_declara_vars_opt $@2 parte_declara_subrotinas_opt . $@3 comando_composto

    $default  reduce using rule 4 ($@3)

    $@3  go to state 40


state 35

   12 parte_declara_subrotinas_opt: $@4 . parte_declara_subrotinas

    FUNCTION   shift, and go to state 41
    PROCEDURE  shift, and go to state 42

    parte_declara_subrotinas  go to state 43
    declaracao_procedimento   go to state 44
    declaracao_funcao         go to state 45


state 36

   17 parte_declara_rotulos_loop: VIRGULA NUMERO . $@6 parte_declara_rotulos_loop

    $default  reduce using rule 16 ($@6)

    $@6  go to state 46


state 37

   14 parte_declara_rotulos: LABEL NUMERO $@5 parte_declara_rotulos_loop PONTO_E_VIRGULA .

    $default  reduce using rule 14 (parte_declara_rotulos)


state 38

   19 parte_declara_vars: VAR $@7 declara_vars PONTO_E_VIRGULA . parte_declara_vars_loop

    IDENT  shift, and go to state 7

    $default  reduce using rule 20 (parte_declara_vars_loop)

    parte_declara_vars_loop  go to state 47
    declara_vars             go to state 48
    lista_idents             go to state 33
    identificador            go to state 9


state 39

   22 declara_vars: lista_idents DOIS_PONTOS . tipo

    IDENT  shift, and go to state 49

    tipo  go to state 50


state 40

    5 bloco: parte_declara_rotulos_opt parte_declara_vars_opt $@2 parte_declara_subrotinas_opt $@3 . comando_composto

    T_BEGIN  shift, and go to state 51

    comando_composto  go to state 52


state 41

   41 declaracao_funcao: FUNCTION . $@13 identificador $@14 parametros_formais_opt $@15 DOIS_PONTOS identificador $@16 PONTO_E_VIRGULA bloco

    $default  reduce using rule 37 ($@13)

    $@13  go to state 53


state 42

   36 declaracao_procedimento: PROCEDURE . $@10 identificador $@11 parametros_formais_opt PONTO_E_VIRGULA $@12 bloco

    $default  reduce using rule 33 ($@10)

    $@10  go to state 54


state 43

   12 parte_declara_subrotinas_opt: $@4 parte_declara_subrotinas .

    $default  reduce using rule 12 (parte_declara_subrotinas_opt)


state 44

   29 parte_declara_subrotinas: declaracao_procedimento . PONTO_E_VIRGULA parte_declara_subrotinas_loop

    PONTO_E_VIRGULA  shift, and go to state 55


state 45

   30 parte_declara_subrotinas: declaracao_funcao . PONTO_E_VIRGULA parte_declara_subrotinas_loop

    PONTO_E_VIRGULA  shift, and go to state 56


state 46

   17 parte_declara_rotulos_loop: VIRGULA NUMERO $@6 . parte_declara_rotulos_loop

    VIRGULA  shift, and go to state 30

    $default  reduce using rule 15 (parte_declara_rotulos_loop)

    parte_declara_rotulos_loop  go to state 57


state 47

   19 parte_declara_vars: VAR $@7 declara_vars PONTO_E_VIRGULA parte_declara_vars_loop .

    $default  reduce using rule 19 (parte_declara_vars)


state 48

   21 parte_declara_vars_loop: declara_vars . PONTO_E_VIRGULA parte_declara_vars_loop

    PONTO_E_VIRGULA  shift, and go to state 58


state 49

   23 tipo: IDENT .

    $default  reduce using rule 23 (tipo)


state 50

   22 declara_vars: lista_idents DOIS_PONTOS tipo .

    $default  reduce using rule 22 (declara_vars)


state 51

   51 comando_composto: T_BEGIN . comando comando_composto_loop T_END

    GOTO     shift, and go to state 59
    IDENT    shift, and go to state 7
    IF       shift, and go to state 60
    NUMERO   shift, and go to state 61
    READ     shift, and go to state 62
    T_BEGIN  shift, and go to state 51
    WHILE    shift, and go to state 63
    WRITE    shift, and go to state 64

    $default  reduce using rule 57 (comando_sem_label)

    comando_composto      go to state 65
    comando               go to state 66
    comando_sem_label     go to state 67
    comando_escrita       go to state 68
    comando_leitura       go to state 69
    atribuicao            go to state 70
    chamada_procedimento  go to state 71
    desvio                go to state 72
    comando_condicional   go to state 73
    comando_repetitivo    go to state 74
    variavel              go to state 75
    identificador         go to state 76


state 52

    5 bloco: parte_declara_rotulos_opt parte_declara_vars_opt $@2 parte_declara_subrotinas_opt $@3 comando_composto .

    $default  reduce using rule 5 (bloco)


state 53

   41 declaracao_funcao: FUNCTION $@13 . identificador $@14 parametros_formais_opt $@15 DOIS_PONTOS identificador $@16 PONTO_E_VIRGULA bloco

    IDENT  shift, and go to state 7

    identificador  go to state 77


state 54

   36 declaracao_procedimento: PROCEDURE $@10 . identificador $@11 parametros_formais_opt PONTO_E_VIRGULA $@12 bloco

    IDENT  shift, and go to state 7

    identificador  go to state 78


state 55

   29 parte_declara_subrotinas: declaracao_procedimento PONTO_E_VIRGULA . parte_declara_subrotinas_loop

    FUNCTION   shift, and go to state 41
    PROCEDURE  shift, and go to state 42

    $default  reduce using rule 31 (parte_declara_subrotinas_loop)

    parte_declara_subrotinas       go to state 79
    parte_declara_subrotinas_loop  go to state 80
    declaracao_procedimento        go to state 44
    declaracao_funcao              go to state 45


state 56

   30 parte_declara_subrotinas: declaracao_funcao PONTO_E_VIRGULA . parte_declara_subrotinas_loop

    FUNCTION   shift, and go to state 41
    PROCEDURE  shift, and go to state 42

    $default  reduce using rule 31 (parte_declara_subrotinas_loop)

    parte_declara_subrotinas       go to state 79
    parte_declara_subrotinas_loop  go to state 81
    declaracao_procedimento        go to state 44
    declaracao_funcao              go to state 45


state 57

   17 parte_declara_rotulos_loop: VIRGULA NUMERO $@6 parte_declara_rotulos_loop .

    $default  reduce using rule 17 (parte_declara_rotulos_loop)


state 58

   21 parte_declara_vars_loop: declara_vars PONTO_E_VIRGULA . parte_declara_vars_loop

    IDENT  shift, and go to state 7

    $default  reduce using rule 20 (parte_declara_vars_loop)

    parte_declara_vars_loop  go to state 82
    declara_vars             go to state 48
    lista_idents             go to state 33
    identificador            go to state 9


state 59

   80 desvio: GOTO . NUMERO

    NUMERO  shift, and go to state 83


state 60

   83 comando_condicional: IF . expressao $@25 THEN comando_sem_label $@26 comando_condicional_else

    ABRE_PARENTESES  shift, and go to state 84
    IDENT            shift, and go to state 7
    MAIS             shift, and go to state 85
    MENOS            shift, and go to state 86
    NOT              shift, and go to state 87
    NUMERO           shift, and go to state 88

    expressao          go to state 89
    expressao_simples  go to state 90
    termo              go to state 91
    fator              go to state 92
    variavel           go to state 93
    chamada_funcao     go to state 94
    numero             go to state 95
    identificador      go to state 96


state 61

   55 comando: NUMERO . $@19 DOIS_PONTOS comando_sem_label

    $default  reduce using rule 54 ($@19)

    $@19  go to state 97


state 62

   68 comando_leitura: READ . ABRE_PARENTESES comando_leitura_1 FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 98


state 63

   88 comando_repetitivo: WHILE . $@27 expressao $@28 DO comando_sem_label

    $default  reduce using rule 86 ($@27)

    $@27  go to state 99


state 64

   67 comando_escrita: WRITE . $@20 ABRE_PARENTESES lista_expressoes FECHA_PARENTESES

    $default  reduce using rule 66 ($@20)

    $@20  go to state 100


state 65

   61 comando_sem_label: comando_composto .

    $default  reduce using rule 61 (comando_sem_label)


state 66

   51 comando_composto: T_BEGIN comando . comando_composto_loop T_END

    PONTO_E_VIRGULA  shift, and go to state 101

    $default  reduce using rule 52 (comando_composto_loop)

    comando_composto_loop  go to state 102


state 67

   56 comando: comando_sem_label .

    $default  reduce using rule 56 (comando)


state 68

   64 comando_sem_label: comando_escrita .

    $default  reduce using rule 64 (comando_sem_label)


state 69

   65 comando_sem_label: comando_leitura .

    $default  reduce using rule 65 (comando_sem_label)


state 70

   58 comando_sem_label: atribuicao .

    $default  reduce using rule 58 (comando_sem_label)


state 71

   59 comando_sem_label: chamada_procedimento .

    $default  reduce using rule 59 (comando_sem_label)


state 72

   60 comando_sem_label: desvio .

    $default  reduce using rule 60 (comando_sem_label)


state 73

   62 comando_sem_label: comando_condicional .

    $default  reduce using rule 62 (comando_sem_label)


state 74

   63 comando_sem_label: comando_repetitivo .

    $default  reduce using rule 63 (comando_sem_label)


state 75

   75 atribuicao: variavel . $@23 ATRIBUICAO expressao

    $default  reduce using rule 74 ($@23)

    $@23  go to state 103


state 76

   77 chamada_procedimento: identificador . $@24 lista_expressoes_opt
  124 variavel: identificador .

    ATRIBUICAO  reduce using rule 124 (variavel)
    $default    reduce using rule 76 ($@24)

    $@24  go to state 104


state 77

   41 declaracao_funcao: FUNCTION $@13 identificador . $@14 parametros_formais_opt $@15 DOIS_PONTOS identificador $@16 PONTO_E_VIRGULA bloco

    $default  reduce using rule 38 ($@14)

    $@14  go to state 105


state 78

   36 declaracao_procedimento: PROCEDURE $@10 identificador . $@11 parametros_formais_opt PONTO_E_VIRGULA $@12 bloco

    $default  reduce using rule 34 ($@11)

    $@11  go to state 106


state 79

   32 parte_declara_subrotinas_loop: parte_declara_subrotinas .

    $default  reduce using rule 32 (parte_declara_subrotinas_loop)


state 80

   29 parte_declara_subrotinas: declaracao_procedimento PONTO_E_VIRGULA parte_declara_subrotinas_loop .

    $default  reduce using rule 29 (parte_declara_subrotinas)


state 81

   30 parte_declara_subrotinas: declaracao_funcao PONTO_E_VIRGULA parte_declara_subrotinas_loop .

    $default  reduce using rule 30 (parte_declara_subrotinas)


state 82

   21 parte_declara_vars_loop: declara_vars PONTO_E_VIRGULA parte_declara_vars_loop .

    $default  reduce using rule 21 (parte_declara_vars_loop)


state 83

   80 desvio: GOTO NUMERO .

    $default  reduce using rule 80 (desvio)


state 84

  122 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 84
    IDENT            shift, and go to state 7
    MAIS             shift, and go to state 85
    MENOS            shift, and go to state 86
    NOT              shift, and go to state 87
    NUMERO           shift, and go to state 88

    expressao          go to state 107
    expressao_simples  go to state 90
    termo              go to state 91
    fator              go to state 92
    variavel           go to state 93
    chamada_funcao     go to state 94
    numero             go to state 95
    identificador      go to state 96


state 85

  102 expressao_simples: MAIS . termo expressao_simples_loop

    ABRE_PARENTESES  shift, and go to state 84
    IDENT            shift, and go to state 7
    NOT              shift, and go to state 87
    NUMERO           shift, and go to state 88

    termo           go to state 108
    fator           go to state 92
    variavel        go to state 93
    chamada_funcao  go to state 94
    numero          go to state 95
    identificador   go to state 96


state 86

  104 expressao_simples: MENOS . termo $@31 expressao_simples_loop

    ABRE_PARENTESES  shift, and go to state 84
    IDENT            shift, and go to state 7
    NOT              shift, and go to state 87
    NUMERO           shift, and go to state 88

    termo           go to state 109
    fator           go to state 92
    variavel        go to state 93
    chamada_funcao  go to state 94
    numero          go to state 95
    identificador   go to state 96


state 87

  123 fator: NOT . fator

    ABRE_PARENTESES  shift, and go to state 84
    IDENT            shift, and go to state 7
    NOT              shift, and go to state 87
    NUMERO           shift, and go to state 88

    fator           go to state 110
    variavel        go to state 93
    chamada_funcao  go to state 94
    numero          go to state 95
    identificador   go to state 96


state 88

  127 numero: NUMERO .

    $default  reduce using rule 127 (numero)


state 89

   83 comando_condicional: IF expressao . $@25 THEN comando_sem_label $@26 comando_condicional_else

    $default  reduce using rule 81 ($@25)

    $@25  go to state 111


state 90

   94 expressao: expressao_simples .
   95          | expressao_simples . IGUAL expressao_simples
   96          | expressao_simples . DIFERENTE expressao_simples
   97          | expressao_simples . MENOR expressao_simples
   98          | expressao_simples . MAIOR expressao_simples
   99          | expressao_simples . MAIOR_IGUAL expressao_simples
  100          | expressao_simples . MENOR_IGUAL expressao_simples

    DIFERENTE    shift, and go to state 112
    IGUAL        shift, and go to state 113
    MAIOR        shift, and go to state 114
    MAIOR_IGUAL  shift, and go to state 115
    MENOR        shift, and go to state 116
    MENOR_IGUAL  shift, and go to state 117

    $default  reduce using rule 94 (expressao)


state 91

  101 expressao_simples: termo . expressao_simples_loop

    MAIS   shift, and go to state 118
    MENOS  shift, and go to state 119
    OR     shift, and go to state 120

    $default  reduce using rule 105 (expressao_simples_loop)

    expressao_simples_loop  go to state 121


state 92

  112 termo: fator . termo_loop

    AND    shift, and go to state 122
    DIV    shift, and go to state 123
    VEZES  shift, and go to state 124

    $default  reduce using rule 113 (termo_loop)

    termo_loop  go to state 125


state 93

  119 fator: variavel .

    $default  reduce using rule 119 (fator)


state 94

  121 fator: chamada_funcao .

    $default  reduce using rule 121 (fator)


state 95

  120 fator: numero .

    $default  reduce using rule 120 (fator)


state 96

  124 variavel: identificador .
  126 chamada_funcao: identificador . $@37 lista_expressoes_opt
